--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express-async-handler": "^1.2.0",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
