--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "./server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "router": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
-  ]
+  "name": "music-album",
+  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/app.js" }]
 }
